Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,8 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/heads/*"]
+	owner = group Administrators
+	label-Code-Review = -2..+2 group motorola_quark
+	label-Verified = -1..+1 group motorola_quark
+	rebase = group motorola_quark
+	submit = group motorola_quark
