Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,3 +7,5 @@
 	rebase = group motorola_quark
 	submit = group motorola_quark
 	create = group motorola_quark
+	forgeCommitter = group motorola_quark
+	push = group motorola_quark
