Disable module whitelisting and set "-perf" local version
Keep the "-perf" local version so that it's distinquishable
from which apq8084 our config originates.

--- a/arch/arm/configs/quark_defconfig
+++ b/arch/arm/configs/quark_defconfig
@@ -34,7 +34,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cm"
+CONFIG_LOCALVERSION="-perf"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -225,7 +225,7 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
-CONFIG_MODULE_WHITELIST=y
+# CONFIG_MODULE_WHITELIST is not set
 CONFIG_MODULE_EXTRA_COPY=y
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
