Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,4 +8,4 @@
 	submit = group motorola_quark
 	create = group motorola_quark
 	forgeCommitter = group motorola_quark
-	push = group motorola_quark
+	push = +force group motorola_quark
