--- a/project.config
+++ b/project.config
@@ -2,10 +2,10 @@
 	inheritFrom = All-Projects
 [access "refs/heads/*"]
 	owner = group Administrators
-	label-Code-Review = -2..+2 group motorola_quark
-	label-Verified = -1..+1 group motorola_quark
-	rebase = group motorola_quark
-	submit = group motorola_quark
-	create = group motorola_quark
-	forgeCommitter = group motorola_quark
-	push = +force group motorola_quark
+	label-Code-Review = -2..+2 group motorola_msm8084
+	label-Verified = -1..+1 group motorola_msm8084
+	rebase = group motorola_msm8084
+	submit = group motorola_msm8084
+	create = group motorola_msm8084
+	forgeCommitter = group motorola_msm8084
+	push = +force group motorola_msm8084
